--- a/.docker-manifest.tmpl
+++ b/.docker-manifest.tmpl
@@ -7,7 +7,7 @@ tags:
 {{/if}}
 manifests:
   -
-    image: cenk1cenk2/do-dyndns:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}
+    image: cenk1cenk2/do-dyndns:{{#if build.tag}}{{trimPrefix "v" build.tag}}{{/if}}
     platform:
       architecture: amd64
       os: linux
